converted Files and Casting to singletons making the now non static methods testable